[package]
name = "ct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "*", features = ["native-tls"] }
disrustor = "0.3.0"


tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
url = { version = "2" }
futures-channel = "0.3.21"
rust-s3 = "0.28"

futures = "0.3"

crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.1.1"
rust_decimal = "1.26.1"
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "serde"]}


